--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,11 @@ spring.jpa.show-sql=true
 spring.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.format-sql=true
 
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/socialcommunity?useSSL=false&useUnicode=true&serverTimezone=Asia/Seoul
+spring.datasource.username=root
+spring.datasource.password=juyeon1158!
+
 
 spring.mustache.expose-request-attributes=true
 
