--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.jpa.show-sql=true
-spring.hibernate.ddl-auto=update
+spring.hibernate.ddl-auto=create-drop
 spring.jpa.properties.hibernate.format-sql=true
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
