일반유저 회원가입, 로그인 완료 / 글 등록 완료

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,11 @@ spring.jpa.show-sql=true
 spring.hibernate.ddl-auto=create
 spring.jpa.properties.hibernate.format-sql=true
 
+#OSIV의 단점을 제거 ( 영속성 컨텍스트의 데이터베이스 커넥션 유지를 막아준다)
+# 하지만 OSIV를 OFF 하면 트랜잭션 내에서 지연로딩을 처리해야 한다.
+# spring.jpa.open-in-view=false
+
+
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/socialcommunity?useSSL=false&useUnicode=true&serverTimezone=Asia/Seoul
 spring.datasource.username=root
