--- a/build.gradle
+++ b/build.gradle
@@ -38,6 +38,6 @@ dependencies {
 	testImplementation 'org.springframework.security:spring-security-test'
 }
 
-tasks.named('test') {
+test {
 	useJUnitPlatform()
 }
